@@ -31,6 +31,7 @@ Changelog
  * Fix: Users with only publish permission are no longer given implicit permission to delete pages (Matt Westcott)
  * Fix: `search_garbage_collect` management command now works when wagtailsearchpromotions is not installed (Morgan Aubert)
  * Fix: `wagtail.contrib.settings` context processor no longer fails when `request.site` is unavailable (Diederik van der Boor)
+ * Fix: `TableBlock` content is now indexed for search (Morgan Aubert)
 
 
 1.7 (20.10.2016)
